...
                                  name: site.name,
                                  url: site.url,
                                  apiKey: site.apiKey,
                                  site: site));
                        }
                      },
                child: const Text('Ajouter le site'),
              ),
            ),
          ],
        ),
      ),
    );
...
